# aid

./: README.md  README_DYSLEXIC.md  code_review_findings.md  pyproject.toml  reqs.txt  snake_game.py
aider/: dyslexic_support.py  io.py  io_update.py  keyboard_shortcuts.py
