[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aider"
dynamic = ["version"]
description = "AI pair programming in your terminal"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["AI", "coding", "pair programming", "GPT", "assistant"]
authors = [
    { name = "Paul Butler", email = "aider@paulbutler.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
dependencies = [
    "gitpython>=3.1.31",
    "openai>=1.1.0",
    "prompt-toolkit>=3.0.38",
    "rich>=13.3.5",
    "tiktoken>=0.4.0",
    "yapf>=0.33.0",
    "litellm>=1.26.8",
    "pillow>=10.0.0",
    "pyyaml>=6.0.1",
    "json5>=0.9.14",
    "termcolor>=2.3.0",
    "colorama>=0.4.6",
    "platformdirs>=3.10.0",
    "types-PyYAML>=6.0.12.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.291",
    "mypy>=1.5.1",
]

gui = [
    "streamlit>=1.24.0",
]

voice = [
    "sounddevice>=0.4.6",
    "vosk>=0.3.45",
]

[project.urls]
Homepage = "https://aider.chat"
Documentation = "https://aider.chat/docs"
Repository = "https://github.com/paul-gauthier/aider"
Issues = "https://github.com/paul-gauthier/aider/issues"

[project.scripts]
aider = "aider.__main__:main"

[tool.hatch.build]
exclude = [
    "tests/*",
    "docs/*",
    "examples/*",
    "scripts/*",
]

[tool.hatch.version]
path = "aider/__init__.py"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=aider --cov-report=term-missing"
testpaths = ["tests"]